Added target blank

--- a/app/index.html
+++ b/app/index.html
@@ -31,52 +31,7 @@
               </form>
 
               <div class="users">
-                <!--   Сообщение об ошибке -->
-                <!--   <div className="user__info">
-                  <h2>Ничего не найдено</h2>
-                </div> -->
-                <ul class="users__list">
-                  <!-- <li class="users__list-item">
-                    <div class="user">
-                      <div class="user__info">
-                        <div class="user__image">
-                          <img
-                            width="100"
-                            src="./images/avatar.png"
-                            alt="Аватар пользователя"
-                          />
-                        </div>
-                        <div class="user__data">
-                          <h1 class="user__name">
-                            Имя
-                            <span>@Логин</span>
-                          </h1>
-                          <p class="user__about">Bio</p>
-                        </div>
-                      </div>
-                      <ul class="user__stats">
-                        <li class="user__stats-item">
-                          Репозитории
-                          <span>Публичные репозитории</span>
-                        </li>
-                        <li class="user__stats-item">
-                          Подписчиков
-                          <span>1000k</span>
-                        </li>
-                        <li class="user__stats-item">
-                          Подписок
-                          <span>52</span>
-                        </li>
-                      </ul>
-                      <ul class="user__location">
-                        <li class="user__location-item">Самара</li>
-                        <li class="user__location-item">
-                          <a href="#">Ссылка на блог</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </li> -->
-                </ul>
+                <ul class="users__list"></ul>
               </div>
             </div>
           </div>
